# rextag

./: .gitignore  CLAUDE.md  Makefile  config.example.yml  pyproject.toml
dbt_project/: dbt_project.yml  packages.yml
dbt_project/models/marts/: _marts.yml
dbt_project/models/staging/: _sources.yml  _staging.yml
dbt_project/models/staging/common_cultural/: _sources.yml  stg_common_cultural_Cities.sql  stg_common_cultural_CongressionalDistricts.sql  stg_common_cultural_Counties.sql  stg_common_cultural_Countries.sql  stg_common_cultural_GulfFairways.sql  stg_common_cultural_HistoricPoints.sql  stg_common_cultural_Ports.sql  stg_common_cultural_PublicLands.sql  stg_common_cultural_Roads.sql  stg_common_cultural_StateCensusTract.sql  stg_common_cultural_States.sql  stg_common_cultural_UrbanAreas.sql
dbt_project/models/staging/floodhazard/: _sources.yml  stg_floodhazard_FloodHazard.sql
dbt_project/models/staging/rextag_financial/: _sources.yml  stg_rextag_financial_Financial_2016Q1.sql  stg_rextag_financial_Financial_2016Q2.sql  stg_rextag_financial_Financial_2016Q3.sql  stg_rextag_financial_Financial_2016Q4.sql  stg_rextag_financial_Financial_2016QY.sql  stg_rextag_financial_Financial_2017Q1.sql  (+51 more)
docs/plans/: 2026-02-17-schema-discovery-design.md
rextag/: __init__.py  cli.py  config.py  convert.py  extract.py  load.py  scan.py  schema.py
scripts/: run_pipeline.sh
tests/: conftest.py  test_cli.py  test_config.py  test_convert.py  test_extract.py  test_extract_helpers.py  test_load.py  test_scan.py  test_scan_generate.py  test_schema.py
(+54 files in other folders)
