[project]
name = "rextag"
version = "0.1.0"
description = "Geodatabase to BigQuery ELT pipeline"
requires-python = ">=3.11"
dependencies = [
    "fiona>=1.9",
    "pyproj>=3.6",
    "google-cloud-storage>=2.0",
    "google-cloud-bigquery>=3.0",
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.scripts]
rextag = "rextag.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
